# NiimPrintX

./: .gitignore  README.md  build.py  pyproject.toml  requirements.txt
.github/workflows/: _build-linux.yaml  _build-macos.yaml  _build-windows.yaml  create-dmg.sh  mac-dmg-builder.sh  tag.yaml
NiimPrintX/cli/: __main__.py  command.py
NiimPrintX/nimmy/: bluetooth.py  exception.py  packet.py  printer.py
NiimPrintX/ui/: AppConfig.py  SplashScreen.py  __main__.py  main.py
NiimPrintX/ui/assets/: icon.icns
NiimPrintX/ui/component/: CacheManager.py  FontList.py
NiimPrintX/ui/widget/: CanvasOperation.py  CanvasSelector.py  FileMenu.py  IconTab.py  ImageOperation.py  PrintOption.py  PrinterOperation.py  StatusBar.py  TabbedIconGrid.py  TextOperation.py  TextTab.py
cli/: bluetooth.py  helper.py  logger_config.py  printer.py
runtime_hooks/macOS/: runtime_hook.py
spec_files/cli_app/: NiimPrintX-linux.spec  NiimPrintX-mac.spec  NiimPrintX-windows.spec
spec_files/ui_app/: NiimPrintX-linux.spec  NiimPrintX-mac.spec  NiimPrintX-windows.spec
